--- a/md/4.md
+++ b/md/4.md
@@ -1,7 +1,8 @@
 
 #VR/AR Weekly
-Issue #4 // July 2, 2015
-[Subscribe to get every issue in your inbox](http://www.vrarweekly.com)
+Issue #4 // July 2, 2015 // [Subscribe to get every issue in your inbox](http://www.vrarweekly.com)
+
+VR/AR Weekly is a collection of the top posts from nine virtual reality subreddits.
 
 
 	
@@ -11,24 +12,44 @@ Issue #4 // July 2, 2015
 roadtovr.com | [comments (192)](https://www.reddit.com/r/oculus/comments/3b3iyo/oculus_to_open_constellation_positional_tracking/)
 
 
+
+&nbsp;
+
+
 **[Oculus CV1 capable of supporting multiple headsets with a single camera says Palmer Luckey](http://uploadvr.com/oculus-cv1-positional-camera-efficient/)**
 uploadvr.com | [comments (64)](https://www.reddit.com/r/oculus/comments/3b8d40/oculus_cv1_capable_of_supporting_multiple/)
 
 
+
+&nbsp;
+
+
 **[New Oculus SDK &amp; Runtime 0.6.0.1 Released](http://www.reddit.com/r/oculus/comments/3b52dt/new_oculus_sdk_runtime_0601_released/)**
 self.oculus | [comments (107)](https://www.reddit.com/r/oculus/comments/3b52dt/new_oculus_sdk_runtime_0601_released/)
+
 New SDK and runtime packages are live. 
 
 The big new feature is Queue ahead. See download page for details.
 
 https://developer.oculus.com/downloads/
 
+&nbsp;
+
+
 **[Oculus Touch controllers meet Skyworld in first test @OculusHQ](https://www.youtube.com/watch?v=pE45LZPGQ2g)**
 youtube.com | [comments (34)](https://www.reddit.com/r/oculus/comments/3bk5d4/oculus_touch_controllers_meet_skyworld_in_first/)
 
 
+
+&nbsp;
+
+
 **[The Orlando Sentinel did a video story on me and my Oculus game development. I did my best to represent VR games to the uninitiated masses!](http://www.orlandosentinel.com/os-local-indie-game-designer-steps-into-virtual-reality-blog-20150626-post.html)**
 orlandosentinel.com | [comments (29)](https://www.reddit.com/r/oculus/comments/3bbo9k/the_orlando_sentinel_did_a_video_story_on_me_and/)
+
+
+
+&nbsp;
 
 
 ##Valve
@@ -37,32 +58,52 @@ orlandosentinel.com | [comments (29)](https://www.reddit.com/r/oculus/comments/3
 youtube.com | [comments (221)](https://www.reddit.com/r/oculus/comments/3b8xgt/the_vive_has_arrived_hover_junkers_devblog_4/)
 
 
+
+&nbsp;
+
+
 **[ViveCraft, tweeted by Garry Newman (Garry's mod, rust)](http://files.facepunch.com/ziks/2015/June/25/2015-06-25-1643-26.mp4)**
 files.facepunch.com | [comments (90)](https://www.reddit.com/r/oculus/comments/3b3s79/vivecraft_tweeted_by_garry_newman_garrys_mod_rust/)
 
 
+
+&nbsp;
+
+
 **[The Future For Lunar Flight... V2 (Steam Forum Post)](http://www.reddit.com/r/oculus/comments/3bdktn/the_future_for_lunar_flight_v2_steam_forum_post/)**
 self.oculus | [comments (50)](https://www.reddit.com/r/oculus/comments/3bdktn/the_future_for_lunar_flight_v2_steam_forum_post/)
+
 Hi there,
 
 My previous ['Future For Lunar Flight'](http://steamcommunity.com/app/208600/discussions/0/846954921840332963/) post was created back in May 2013 over 2 years ago now.
 
 Since then people still post replies expressing their fondness for the game and their wishes for it to continue to be up[...]
 
+&nbsp;
+
+
 ##Google
 
 **[How to play YouTube 360 videos with a DK2](http://www.reddit.com/r/oculus/comments/3bh2rg/how_to_play_youtube_360_videos_with_a_dk2/)**
 self.oculus | [comments (63)](https://www.reddit.com/r/oculus/comments/3bh2rg/how_to_play_youtube_360_videos_with_a_dk2/)
+
 It is mind boggling that tablets, phones, ~~GearVR~~ and google cardboard can experience YouTube's recent crop of 360 VR videos but that there isn't an easy way to consume them on the Rift.
 
 
 So my weekend project has been to add an easy way to playback those videos at the highest possible quality.
 [...]
 
+&nbsp;
+
+
 ##Microsoft
 
 **[SpaceX CRS-7 destroyed, among the cargo, Modified Hololenses on the way to International Space Station.](http://i.imgur.com/6dIeNIm.gifv)**
 i.imgur.com | [comments (112)](https://www.reddit.com/r/oculus/comments/3bepxx/spacex_crs7_destroyed_among_the_cargo_modified/)
+
+
+
+&nbsp;
 
 
 ##Other
@@ -71,28 +112,53 @@ i.imgur.com | [comments (112)](https://www.reddit.com/r/oculus/comments/3bepxx/s
 i.imgur.com | [comments (157)](https://www.reddit.com/r/oculus/comments/3b55sl/zero_latency_mechanical_eye_tracking/)
 
 
+
+&nbsp;
+
+
 **[Now this is a fully realized, hyper-detailed VR game](https://www.youtube.com/watch?v=__i_LoRKhJ0)**
 youtube.com | [comments (243)](https://www.reddit.com/r/oculus/comments/3boxrr/now_this_is_a_fully_realized_hyperdetailed_vr_game/)
+
+
+
+&nbsp;
 
 
 **[The Cycle of Techno-Pessimism (xpost from /r/Futurology)](http://i.imgur.com/2GMMuQe.jpg)**
 i.imgur.com | [comments (49)](https://www.reddit.com/r/oculus/comments/3brbys/the_cycle_of_technopessimism_xpost_from/)
 
 
+
+&nbsp;
+
+
 **[EmuVR - little update: changing CDs on PS1](http://www.gfycat.com/JollyPositiveAndalusianhorse)**
 gfycat.com | [comments (58)](https://www.reddit.com/r/oculus/comments/3bbuf9/emuvr_little_update_changing_cds_on_ps1/)
+
+
+
+&nbsp;
 
 
 **[NVIDIA Takes the Lid Off ‘Gameworks VR’ - Road to VR guest post by NVIDIA Graphics Programmer Nathan Reed](http://www.roadtovr.com/nvidia-takes-the-lid-off-gameworks-vr-technical-deep-dive-and-community-qa)**
 roadtovr.com | [comments (172)](https://www.reddit.com/r/oculus/comments/3bi9ro/nvidia_takes_the_lid_off_gameworks_vr_road_to_vr/)
 
 
+
+&nbsp;
+
+
 **[unity foveated rendering test 4x fps increase with a pretty simple rendering strategy.](https://www.youtube.com/watch?v=GKR8tM28NnQ)**
 youtube.com | [comments (184)](https://www.reddit.com/r/oculus/comments/3bls3q/unity_foveated_rendering_test_4x_fps_increase/)
 
 
+
+&nbsp;
+
+
 **[Virtual Desktop Update - SDK 0.6 - Direct Mode + Fullscreen Games support](http://www.reddit.com/r/oculus/comments/3basp5/virtual_desktop_update_sdk_06_direct_mode/)**
 self.oculus | [comments (159)](https://www.reddit.com/r/oculus/comments/3basp5/virtual_desktop_update_sdk_06_direct_mode/)
+
 Hi guys, Direct Mode support is finally here! While there are still some issues with the latest SDK (0.6.0.1), I've decided to release an update so that everyone can try it out.
 
 **The 0.6 SDK brings a lot of improvements:**
@@ -100,38 +166,69 @@ Hi guys, Direct Mode support is finally here! While there are still some issues 
 * CPU usage is now negligible (around 1%) on Windows 8 or 10
 * Latency is [...]
 
+&nbsp;
+
+
 **[Trying to cancel STEM system preorder. My journey so far.](http://www.reddit.com/r/oculus/comments/3bn05z/trying_to_cancel_stem_system_preorder_my_journey/)**
 self.oculus | [comments (173)](https://www.reddit.com/r/oculus/comments/3bn05z/trying_to_cancel_stem_system_preorder_my_journey/)
+
 It's time for the biweekly Sixense STEM thread..
 
 So I preordered (not KS!) a STEM system back in june 2014. I regret that now, lots of egg on my face and all that.
 
 Due to the lack of communication, the constant redesigns and the introduction of the other controllers from the headset manufacturers,[...]
 
+&nbsp;
+
+
 **[1994 PCGamer article on VR headsets [x-post /r/retrogamingmags](Sorry if this has been posted before)](https://imgur.com/a/TpiQW)**
 imgur.com | [comments (56)](https://www.reddit.com/r/oculus/comments/3btyev/1994_pcgamer_article_on_vr_headsets_xpost/)
+
+
+
+&nbsp;
 
 
 **[Breakthrough inexpensive lightfield HMD technique (your eyes can focus)](https://vimeo.com/128641900)**
 vimeo.com | [comments (90)](https://www.reddit.com/r/oculus/comments/3bhz0g/breakthrough_inexpensive_lightfield_hmd_technique/)
 
 
+
+&nbsp;
+
+
 **[Our last summer guys before everything changes](http://www.reddit.com/r/oculus/comments/3badbl/our_last_summer_guys_before_everything_changes/)**
 self.oculus | [comments (61)](https://www.reddit.com/r/oculus/comments/3badbl/our_last_summer_guys_before_everything_changes/)
+
 This is it, next year it will all be different. Consumer VR will be out and the anticipation, hopes and dreams will all be slightly paler as we experience first hand regularly what we have only snatched at in sound bites and articles. 
 
 Nothing can ever be as good as we imagine them to be, it will b[...]
 
+&nbsp;
+
+
 **["What is AltspaceVR?" with Cymatic Bruce](https://www.youtube.com/watch?v=CQtQGoMRXaI)**
 youtube.com | [comments (80)](https://www.reddit.com/r/oculus/comments/3b5hb9/what_is_altspacevr_with_cymatic_bruce/)
+
+
+
+&nbsp;
 
 
 **[[UE4] Such a relaxing place to visit in VR. Holy crap kooolalala.](https://www.youtube.com/watch?v=_nLGoqqDc0w)**
 youtube.com | [comments (51)](https://www.reddit.com/r/oculus/comments/3bkrro/ue4_such_a_relaxing_place_to_visit_in_vr_holy/)
 
 
+
+&nbsp;
+
+
 **[Jaunt announces "NEO", a 360º light field camera for professionals - promises "cinematic" 360 stereo](http://uploadvr.com/jaunt-vr-neo-camera/)**
 uploadvr.com | [comments (54)](https://www.reddit.com/r/oculus/comments/3bmk4k/jaunt_announces_neo_a_360º_light_field_camera_for/)
+
+
+
+&nbsp;
 
 
 **[I Expect You to Die (Quick Look + Impressions)](https://www.youtube.com/watch?v=uteFosiioUI)**
@@ -139,4 +236,6 @@ youtube.com | [comments (27)](https://www.reddit.com/r/oculus/comments/3bg5ux/i_
 
 
 
-This is an experiment that will improve every week. Reply to this thread to share feedback. 
+&nbsp;
+
+
